Wed Feb 14 18:07:25 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/pattern.c: priorities were horribly broken, hope it's
	  fixed

Wed Feb 14 15:39:06 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* FEATURES libxslt/imports.h libxslt/pattern.[ch]
	  libxslt/xsltInternals.h libxslt/transform.[ch]
	  libxslt/templates.c libxslt/xslt.c:
	  Added apply-imports, keep a stack of running templates
	* libxslt/xsltutils.c: bugfixes, gather the output informations
	  down the cascade
	* tests/xmlspec/Makefile.am tests/xmlspec/REC-xml-2e.xsl
	  tests/xmlspec/diffspec.xsl tests/xmlspec/xmlspec.xsl: running
	  the real set of transformation on XML-1.0 2e generages a near
	  perfect HTML. Needs just more number fixes and implementation
	  and an obscure problem in 3.3.3

Tue Feb 13 20:31:03 CET 2001 Bjorn Reese <breese@users.sourceforge.net>

	* libxslt/pattern.c: added xsltMatchPattern()
	* libxslt/numbers.c: implemented "level=multiple" for xsl:number

Tue Feb 13 18:07:12 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.c libxslt/xsltproc.c: cleanup and debug
	* libxslt/xsltutils.[ch] : added a small debugging hook

Mon Feb 12 18:30:26 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/FEATURES libxslt/transform.c: added support for
	  disable-output-escaping in xsl:copy-of
	* xmlspec/Makefile.am libxslt/variables.c libxslt/transform.c:
	  give more debugging info

Sun Feb 11 21:08:35 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/documents.[ch] libxslt/functions.c libxslt/imports.c
	  libxslt/xslt.c libxslt/xsltInternals.h: changed teh way to store
	  Includes, more document changes
	* libxslt/xsltutils.c: fix the output of doctype and what is or
	  is not HTML
	* tests/REC/*.out tests/REC2/html.xml : changed output accordingly
	* tests/Makefile.am tests/documents/* : added a new test from Stric
	  exercising document() among other things
