@@ -45,6 +45,11 @@ EXTRA_DIST = 						\
     test-7.6.1-2.out test-7.6.1-2.xml test-7.6.1-2.xsl	\
     test-7.6.1-3.out test-7.6.1-3.xml test-7.6.1-3.xsl	\
     test-7.6.2-1.out test-7.6.2-1.xml test-7.6.2-1.xsl	\
+    test-7.7-1.out test-7.7-1.xml test-7.7-1.xsl        \
+    test-7.7-2.out test-7.7-2.xml test-7.7-2.xsl        \
+    test-7.7-3.out test-7.7-3.xml test-7.7-3.xsl        \
+    test-7.7-4.out test-7.7-4.xml test-7.7-4.xsl        \
+    test-7.7-5.out test-7.7-5.xml test-7.7-5.xsl        \
     test-8-1.out test-8-1.xml test-8-1.xsl		\
     test-9.1-1.out test-9.1-1.xml test-9.1-1.xsl	\
     test-9.1-2.out test-9.1-2.xml test-9.1-2.xsl	\
