@@ -1,0 +1,15 @@
+<xsl:stylesheet
+  version="1.0"
+  xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
+
+<xsl:template match="items">
+  <xsl:for-each select="item">
+    <xsl:sort select="."/>
+    <p>
+      <xsl:number value="position()" format="1. "/>
+      <xsl:value-of select="."/>
+    </p>
+  </xsl:for-each>
+</xsl:template>
+
+</xsl:stylesheet>
